<resources>
    <string name="app_name">普通话学习系统</string>


    <!-- activity_essaylist -->
    <string name="short_essay">短文跟读</string>
    <string name="record">录音</string>
    <string name="pause">暂停</string>
    <string name="play">播放</string>

    <!-- dialog_logout -->
    <string name="notice">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string-array name="request_permission_reason">
        <item>为了您更好的使用播放语音、录制音频等功能，需要您同意以下这些权限：</item>
        <item>1. 访问您设备上的内容和文件</item>
        <item>2. 允许访问麦克风</item>
        <item>3. 获取手机状态信息</item>
    </string-array>
    <string name="permission">为了您能够使用录音功能，需要您同意录音、读取手机存储等权限</string>

    <!-- activity_main -->
    <string name="home">首页</string>
    <string name="online_learning">在线学习</string>
    <string name="exam_center">模考中心</string>
    <string name="classroom_for_famous_teachers">名师课堂</string>
    <string name="personal_center">个人中心</string>

    <!-- activity_login-->
    <string name="login">登录</string>
    <string name="jump_login">点击跳过</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="other_login">其它方式登录</string>
    <string name="get_votify_code">获取验证码</string>
    <string name="logining">登录中...</string>
    <string name="register_name_digits">
        ._@0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>

    <!-- fragment_personal_center-->
    <string name="personal_tongji">个人统计</string>
    <string name="learning_progress">学习进度</string>
    <string name="general_purpose">通用</string>

    <!-- fragment_home-->
    <string name="exam_registration">考试报名</string>
    <string name="registration_inquiry">报名查询</string>
    <string name="registration_introduction">报名介绍</string>
    <string name="admission_ticket">准考证</string>
    <string name="admission_ticket_inquiry">准考证查询</string>
    <string name="result_inquiry">成绩查询</string>
    <string name="e_learning">在线学习</string>
    <string name="model_test_center">模考中心</string>
    <string name="teacher_class">名师课堂</string>
    <string name="certificate_verification">证书验证</string>
    <string name="basic_learning">基础学习</string>
    <string name="more">更多</string>

    <!-- activity_personal_info-->
    <string name="personal_info">个人信息</string>
    <string name="upload_avatar">上传头像</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="date_of_birth">出生年月</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="district">所属区县</string>
    <string name="area">地址</string>
    <string name="affiliation">所属机构</string>
    <string name="save">保存</string>

    <!-- activity_general_purpose-->
    <string name="current_version">当前版本</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="enter_us">加入我们</string>
    <string name="exit_login">退出登录</string>
    <string name="is_exits">是否退出当前账号？</string>

    <!-- activity_about_us-->

    <!-- activity_feedback-->
    <string name="commit">提交</string>

    <!-- fragment_exercise-->
    <string name="sort_reading_volume">阅读量排序</string>
    <string name="sort_upload_date">上传日期排序</string>
    <string name="sort">排序</string>

    <!-- activity_exercise_detail-->
    <string name="all_comment">全部评论</string>
    <string name="publish">发表</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="no_comment">当前还没有评论哦~</string>

    <!--activity_detail_play-->
    <string name="time_zero">00:00</string>

    <!--item_all-->
    <string name="all">全部</string>

    <!--activity_exam_detail-->
    <string name="mandarin_level_test">普通话一级测试</string>
    <string name="next_question">下一题</string>
    <string name="next_set_of_papers">下一套试卷</string>
    <string name="time_fourth_minute">04:00</string>

    <!--fragment_detail_hanzi-->
    <string name="pinyin">拼音</string>
    <string name="bishun">笔顺</string>

    <!--activity_query-->
    <string name="query">查询</string>

    <string-array name="registration_introduction_content">
        <item>一、应试者应试时，须携带相关指定证件(二代身份证原件及准考证，学生还应带上有效学生证原件)，否则不予报名测试。 </item>
        <item>二、应试者应严格按照准考证上指定的报名时间到现场进行报名。如未按时到者，取消测试资格，测试费不予退还。 </item>
        <item>三、系统支持在线报名、在线支付功能，带有银联标志的支持在线支付，其他需到测试站现场支付测试费，打印准考证。 </item>
        <item>四、应试者在测试后按规定的时间、地点凭身份证原件及“准考证”领取证书。由他人代领证书的，除交验应试人身份证复印件及“准考证”原件外，还需交验代领者的身份证。 </item>
        <item>五、考试严禁作弊及代考，一经发现，取消本次测试成绩及一年内的应试资格。 </item>
    </string-array>

    <!--activity_registration_query-->
    <string name="candidate_name">考生姓名：</string>
    <string name="ID_number">证件编号：</string>
    <string name="registration_status">报名状态：</string>
    <string name="payment_instructions">缴费须知：</string>

    <!--activity_ticket_inquiry-->
    <string name="sex_">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别：</string>
    <string name="nation_">民&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;族：</string>
    <string name="photo_">照&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;片：</string>
    <string name="job_">从事职业：</string>
    <string name="unit_">所在单位：</string>
    <string name="admission_tickets_">准考证号：</string>
    <string name="level_">报考级别：</string>
    <string name="grade_">考试成绩：</string>

    <string name="next_step">下一步</string>
    <string name="confirm_registration">确定报名</string>

</resources>
