<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.activity.TicketInquiryActivity">

    <com.hlxyedu.putonghualearningsystem.weight.actionbar.XBaseTopBar
        android:id="@+id/xbase_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isShowLeft_x="true"
        app:isShowRight_x="false"
        app:middleText_x="@string/admission_ticket_inquiry" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/whitefff"
        android:paddingStart="32dp"
        android:paddingTop="17dp"
        android:paddingBottom="17dp">

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/candidate_name"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/candidate_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/name_tv"
            android:text="张小盒"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_tv"
            android:layout_marginTop="14dp"
            android:text="@string/ID_number"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ID_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/id_tv"
            android:layout_toEndOf="@+id/id_tv"
            android:text="12012020202020202020"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/xingbie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_tv"
            android:layout_marginTop="14dp"
            android:text="@string/sex_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sex_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/xingbie_tv"
            android:layout_toEndOf="@+id/xingbie_tv"
            android:text="男"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/minzu_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/xingbie_tv"
            android:layout_marginTop="14dp"
            android:text="@string/nation_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/minzu_tv"
            android:layout_toEndOf="@+id/minzu_tv"
            android:text="汉"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/zhiye_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/minzu_tv"
            android:layout_marginTop="14dp"
            android:text="@string/job_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/job_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/zhiye_tv"
            android:layout_toEndOf="@+id/zhiye_tv"
            android:text="语文教师"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/danwei_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zhiye_tv"
            android:layout_marginTop="14dp"
            android:text="@string/unit_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/unit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/danwei_tv"
            android:layout_toEndOf="@+id/danwei_tv"
            android:text="和田一中"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/zhunkaozhenghao_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/danwei_tv"
            android:layout_marginTop="14dp"
            android:text="@string/admission_tickets_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ticket_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/zhunkaozhenghao_tv"
            android:layout_toEndOf="@+id/zhunkaozhenghao_tv"
            android:text="12345678900000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/jibie_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/zhunkaozhenghao_tv"
            android:layout_marginTop="14dp"
            android:text="@string/level_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/jibie_tv"
            android:layout_toEndOf="@+id/jibie_tv"
            android:text="一级甲等"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/zp_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jibie_tv"
            android:layout_marginTop="14dp"
            android:text="@string/photo_"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/photo_iv"
            android:layout_width="79dp"
            android:layout_height="96dp"
            android:layout_alignTop="@+id/zp_tv"
            android:layout_toEndOf="@+id/zp_tv"
            android:background="@mipmap/ic_launcher" />

    </RelativeLayout>

    <Button
        android:id="@+id/save_btn"
        style="@style/textSize_whitefff_16"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/blue_btn_bg"
        android:text="@string/save" />

</LinearLayout>