<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitefff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.personal.activity.PersonalInfoActivity">

    <com.hlxyedu.putonghualearningsystem.weight.actionbar.XBaseTopBar
        android:id="@+id/xbase_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isShowLeft_x="true"
        app:isShowRight_x="false"
        app:middleText_x="@string/personal_info" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray5F5"
                android:orientation="vertical"
                android:paddingBottom="13dp">

                <ImageView
                    android:id="@+id/headportrait_iv"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/icon_headportrait" />

                <TextView
                    android:id="@+id/name_tv"
                    style="@style/textSize_black353_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/upload_avatar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSize_black353_14"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/input_name_edit"
                    style="@style/textSize_gray4B4_14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="请输入姓名"
                    android:singleLine="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3E3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSize_black353_14"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/sex" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/man_rb"
                        style="@style/textSize_black353_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/man" />

                    <RadioButton
                        android:id="@+id/woman_rb"
                        style="@style/textSize_black353_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:text="@string/woman" />

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3E3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSize_black353_14"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/date_of_birth" />

                <TextView
                    android:id="@+id/date_of_birth_tv"
                    style="@style/textSize_gray4B4_14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3E3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSize_black353_14"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/district" />

                <TextView
                    android:id="@+id/district_tv"
                    style="@style/textSize_gray4B4_14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:gravity="center_vertical" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3E3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSize_black353_14"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/area" />

                <EditText
                    android:id="@+id/area_edit"
                    style="@style/textSize_gray4B4_14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/my_cursor" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3E3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/textSize_black353_14"
                    android:layout_width="74dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:text="@string/affiliation" />

                <EditText
                    android:id="@+id/affiliation_edit"
                    style="@style/textSize_gray4B4_14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="28dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/my_cursor" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray3E3" />

            <!--<View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                />-->

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/save_btn"
        style="@style/textSize_black353_14"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/grayADA"
        android:gravity="center"
        android:text="@string/save" />

</LinearLayout>