<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/notice"
        android:textColor="@color/blackE3E"
        android:textSize="@dimen/textsize_sp_15"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="27dp"
        android:gravity="left"
        android:textColor="@color/blackE3E"
        android:textSize="@dimen/textsize_sp_14" />

    <LinearLayout
        android:id="@+id/ll_botton_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="27dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_neg"
                style="@style/textSize_whitefff_13"
                android:layout_width="90dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="3dp"
                android:background="@drawable/back_left_selector"
                android:text="@string/cancel"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_pos"
                style="@style/textSize_whitefff_13"
                android:layout_width="90dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="3dp"
                android:background="@drawable/back_right_selector"
                android:text="@string/confirm"
                />

        </RelativeLayout>



    </LinearLayout>

</LinearLayout>